Fri Nov  8 11:15:07 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makeconf.in (version): Look in $(TOPDIR)/src then
	$(srcdir)/$(TOPDIR)/src for version.h.

	* configure.in (TERMLIBS): Print warning message if no term
	library is found.
	(CXXLIB_LIST, CXXLIB_PATH, FLIB_LIST, FLIB_PATH): Delete.
	* Makeconf.in (CXXLIB_LIST, CXXLIB_PATH, FLIB_LIST, FLIB_PATH):
	Delete.
	(do-subst-default-vals): Delete CXXLIB_LIST, CXXLIB_PATH,
	FLIB_LIST, and FLIB_PATH from the list.

Thu Nov  7 12:43:36 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* octMakefile.in (bin-dist-tar): Delete references to octtopnm.

	* configure.in (RLD_FLAG): Define if x86-linux.

	* Version 1.91.

Wed Nov  6 16:26:39 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Add checks for group stuff.

Tue Nov  5 12:32:30 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Add checks for geteuid, getuid.

	* configure.in: Comment out code to handle --enable-readline since
	it doesn't work yet.

	* aclocal.m4 (OCTAVE_SIGNAL_CHECK, OCTAVE_REINSTALL_SIGHANDLERS):
	New checks stolen from bash 2.0 config.
	* configure.in: Use them.

	* acconfig.h: Add #undefs for HAVE_BSD_SIGNALS, HAVE_POSIX_SIGNALS,
	HAVE_USG_SIGHOLD, and MUST_REINSTALL_SIGHANDLERS.

Mon Nov  4 11:31:22 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Check for gethostname in libsocket.  Apparently
	needed for some SCO systems.

	* emacs/octave.el: Update to version 0.8.5 from Kurt Hornik.

Fri Nov  1 01:33:40 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* octMakefile.in (octave-bug, mkoctfile): After substituting
	values, chmod a+rx.

Thu Oct 31 13:50:06 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* octMakefile.in (DISTFILES): Add NEWS.[0-9].
	* NEWS.1: Old news.
	* NEWS: Just keep news since last major release.

Wed Oct 30 01:04:13 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Version 1.90.

	* configure.in: Default is now no internal bounds checking.
