@@ -7,8 +7,10 @@
 #define GCC_ATTR_UNUSED
 #endif
 
+#if defined (__GNUC__)
 #if __GNUC__ > 2 || (__GNUC__ == 2 && __GNUC_MINOR__ > 7)
 #define NPOS string::npos
+#endif
 #endif
 
 #define STATIC_CAST(T, E) (T) (E)
